--- a/src/_includes/css/page.css
+++ b/src/_includes/css/page.css
@@ -7,7 +7,6 @@
 }
 
 .page-title {
-  font: var(--font-display);
   letter-spacing: var(--font-display-spacing);
   margin: 0;
   text-wrap: balance;
@@ -36,3 +35,55 @@
   border-top: solid 1px var(--color-line);
   margin-top: var(--row-gap-medium);
 }
+
+
+
+/* PC用のフォントサイズ */
+@media (min-width: 481px) {
+  .post-header{
+    font-size: 2.5em;
+  }
+
+  .post-excerpt.body {
+    font-size: 2em;
+  }
+
+  .post-excerpt.body {
+    font-size: 1.2em;
+  }
+
+  .body img {
+    max-width: 80%;
+  }
+
+  .postList {
+    & .post-title {
+      & a {
+        font-size: 0.8em;
+      }
+    }
+  }
+}
+
+/* スマートフォン用のフォントサイズ */
+@media (max-width: 480px) {
+  .post-title{
+    font-size: 0.8em;
+  }
+
+  .post-header{
+    font-size: 1.6em;
+    line-height: 0.5em;
+
+  }
+
+  .post-excerpt.body {
+    font-size: 1em;
+  }
+
+  .post-excerpt.body {
+    font-size: 0.8em;
+  }
+
+}
+
